<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_icon_home"
            android:title="@string/inicio" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_icon_person"
            android:title="@string/mi_perfil" />
        <item
            android:id="@+id/favouriteRestaurants"
            android:icon="@drawable/ic_icon_favourite"
            android:title="@string/restaurantes_favoritos" />
        <item
            android:id="@+id/orderHistory"
            android:icon="@drawable/ic_icon_order_history"
            android:title="@string/historial_de_pedidos" />
        <item
            android:id="@+id/faqs"
            android:icon="@drawable/ic_icon_faqs"
            android:title="@string/faqs_preguntas_frecuentes" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_icon_logout"
            android:title="@string/cerrar_sesi_n" />

    </group>
</menu>